--- a/templates/custom-template.tex
+++ b/templates/custom-template.tex
@@ -1,48 +1,19 @@
-\documentclass[$if(fontsize)$$fontsize$,$endif$$if(lang)$$lang$,$endif$$if(papersize)$$papersize$,$endif$]{$documentclass$}
-\usepackage{geometry}
+\documentclass[a4paper,12pt]{article}
+\usepackage[top=0.5in, bottom=0.5in, left=0.5in, right=0.5in]{geometry}
 \usepackage{xeCJK}
 \usepackage{fontspec}
 \usepackage{hyperref}
 \usepackage{listings}
 \usepackage{color}
 \usepackage{titlesec}
-\usepackage{titletoc}
-\usepackage{fancyhdr}
-\usepackage{lastpage}
-
-% 设置页边距
-\geometry{left=0.5in, right=0.5in, top=0.5in, bottom=0.5in}
+\usepackage{tocloft}
 
 % 设置中文字体
-\setCJKmainfont{Noto Sans CJK SC}
-\setCJKsansfont{Noto Sans CJK SC}
-\setCJKmonofont{Noto Sans Mono CJK SC}
+\setCJKmainfont{WenQuanYi Micro Hei}
+\setCJKsansfont{WenQuanYi Micro Hei}
+\setCJKmonofont{WenQuanYi Micro Hei Mono}
 
-% 设置代码样式
-\lstset{
-    basicstyle=\ttfamily\small,
-    breaklines=true,
-    frame=single,
-    numbers=left,
-    numberstyle=\tiny\color{gray},
-    keywordstyle=\color{blue},
-    commentstyle=\color{green!60!black},
-    stringstyle=\color{red},
-}
-
-% 设置章节格式
-\titleformat{\section}{\Large\bfseries}{\thesection}{1em}{}
-\titleformat{\subsection}{\large\bfseries}{\thesubsection}{1em}{}
-\titleformat{\subsubsection}{\normalsize\bfseries}{\thesubsubsection}{1em}{}
-
-% 设置页眉页脚
-\pagestyle{fancy}
-\fancyhf{}
-\fancyhead[L]{\leftmark}
-\fancyhead[R]{\thepage/\pageref{LastPage}}
-\renewcommand{\headrulewidth}{0.5pt}
-
-% 设置超链接样式
+% 设置超链接
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
@@ -50,26 +21,31 @@
     citecolor=blue,
 }
 
+% 设置章节格式
+\titleformat{\section}{\Large\bfseries}{\thesection}{1em}{}
+\titleformat{\subsection}{\large\bfseries}{\thesubsection}{1em}{}
+\titleformat{\subsubsection}{\normalsize\bfseries}{\thesubsubsection}{1em}{}
+
+% 设置代码样式
+\lstset{
+    basicstyle=\ttfamily\small,
+    breaklines=true,
+    numbers=left,
+    numberstyle=\tiny\color{gray},
+    frame=single
+}
+
 \begin{document}
 
-% 标题页
-\begin{titlepage}
-    \centering
-    \vspace*{2cm}
-    {\Huge\bfseries $title$\par}
-    \vspace{1cm}
-    {\Large $author$\par}
-    \vspace{0.5cm}
-    {\large $date$\par}
-    \vfill
-    {\large 自动生成文档\par}
-\end{titlepage}
+\title{$title$}
+\author{$author$}
+\date{$date$}
 
-% 目录
+\maketitle
+
 \tableofcontents
-\clearpage
+\newpage
 
-% 内容
 $body$
 
 \end{document}
