修复 GitHub Actions 工作流
- 修复 MD to PDF 工作流中中文行内代码的处理问题
- 使用自定义模板替代 pandoc 默认的 listings 配置
- 修复 OCR 工作流中 Ubuntu 24.04 依赖包问题
- 添加 libgl1 和 libglvnd0 包替代已废弃的 libgl1-mesa-glx

--- a/templates/custom-template.tex
+++ b/templates/custom-template.tex
@@ -32,7 +32,10 @@
     breaklines=true,
     numbers=left,
     numberstyle=\tiny\color{gray},
-    frame=single
+    frame=single,
+    escapechar=|,
+    extendedchars=false,
+    escapeinside={(*@}{@*)}
 }
 
 \begin{document}
