添加 pandoc 所需的 tightlist 和 listparindent 命令定义

--- a/templates/custom-template.tex
+++ b/templates/custom-template.tex
@@ -8,6 +8,11 @@
 \usepackage{titlesec}
 \usepackage{tocloft}
 
+% 定义 pandoc 需要的命令
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+\providecommand{\listparindent}{0pt}
+
 % 设置中文字体
 \setCJKmainfont{WenQuanYi Micro Hei}
 \setCJKsansfont{WenQuanYi Micro Hei}
