修复 PDF 转换和 OCR 工作流
- 添加 --wrap=preserve 保留换行
- 添加字体大小和行间距变量
- 修复模板中的 listparindent 命令
- 添加数学公式支持
- 修改 OCR 工作流默认处理所有图片

--- a/templates/custom-template.tex
+++ b/templates/custom-template.tex
@@ -7,11 +7,13 @@
 \usepackage{color}
 \usepackage{titlesec}
 \usepackage{tocloft}
+\usepackage{amsmath}
+\usepackage{amssymb}
 
 % 定义 pandoc 需要的命令
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-\providecommand{\listparindent}{0pt}
+\providecommand{\listparindent}{\setlength{\parindent}{0pt}}
 
 % 设置中文字体
 \setCJKmainfont{WenQuanYi Micro Hei}
