--- a/templates/custom-template.tex
+++ b/templates/custom-template.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,12pt]{article}
-\usepackage[top=0.5in, bottom=0.5in, left=0.5in, right=0.5in]{geometry}
+\usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
 \usepackage{xeCJK}
 \usepackage{fontspec}
 \usepackage{hyperref}
@@ -9,6 +9,9 @@
 \usepackage{tocloft}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{graphicx}
+\usepackage{fancyhdr}
+\usepackage{lastpage}
 
 % 定义 pandoc 需要的命令
 \providecommand{\tightlist}{%
@@ -26,12 +29,13 @@
     linkcolor=blue,
     urlcolor=blue,
     citecolor=blue,
+    pdfborder={0 0 0},
 }
 
 % 设置章节格式
-\titleformat{\section}{\Large\bfseries}{\thesection}{1em}{}
-\titleformat{\subsection}{\large\bfseries}{\thesubsection}{1em}{}
-\titleformat{\subsubsection}{\normalsize\bfseries}{\thesubsubsection}{1em}{}
+\titleformat{\section}{\Large\bfseries\color{blue}}{\thesection}{1em}{}
+\titleformat{\subsection}{\large\bfseries\color{teal}}{\thesubsection}{1em}{}
+\titleformat{\subsubsection}{\normalsize\bfseries\color{purple}}{\thesubsubsection}{1em}{}
 
 % 设置代码样式
 \lstset{
@@ -40,16 +44,31 @@
     numbers=left,
     numberstyle=\tiny\color{gray},
     frame=single,
+    backgroundcolor=\color{gray!10},
     escapechar=|,
     extendedchars=false,
     escapeinside={(*@}{@*)}
 }
 
+% 设置页眉页脚
+\pagestyle{fancy}
+\fancyhf{}
+\fancyhead[L]{\leftmark}
+\fancyhead[R]{\thepage}
+\fancyfoot[C]{\small $date$}
+\renewcommand{\headrulewidth}{0.4pt}
+\renewcommand{\footrulewidth}{0.4pt}
+
+% 目录样式
+\renewcommand{\cftsecfont}{\bfseries}
+\renewcommand{\cftsubsecfont}{}
+\renewcommand{\cftsubsubsecfont}{}
+
 \begin{document}
 
-\title{$title$}
-\author{$author$}
-\date{$date$}
+\title{\Huge\bfseries $title$}
+\author{\Large $author$}
+\date{\large $date$}
 
 \maketitle
 
